<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shownIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            android:orderInCategory="1" />

        <item android:id="@+id/nav_account"
            android:title="@string/account"
            android:icon="@drawable/ic_person"
            android:orderInCategory="2" />

        <item android:id="@+id/nav_guest_reservations"
            android:title="@string/guest_reservations"
            android:icon="@drawable/ic_reservation"
            android:orderInCategory="3" />

        <item android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"
            android:orderInCategory="4" />
    </group>
</menu>