<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="47dp"
            android:paddingEnd="47dp"
            android:paddingVertical="20dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile_example"
                android:contentDescription="@string/profile_picture" />
            <Button
                android:id="@+id/btnEditImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:visibility="gone"
                android:text="@string/btn_edit_image"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Odyssey.TextInputLayout"
                android:hint="@string/name"
                android:id="@+id/account_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_input_name"
                    style="@style/Theme.Odyssey.TextInputNotEditable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/example_name"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Odyssey.TextInputLayout"
                android:hint="@string/surname"
                android:id="@+id/account_input_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.Odyssey.TextInputNotEditable"
                    android:id="@+id/field_input_surname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/example_surname"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Odyssey.TextInputLayout"
                android:hint="@string/address"
                android:id="@+id/account_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_input_address"
                    style="@style/Theme.Odyssey.TextInputNotEditable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/example_address"
                    android:inputType="textPostalAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Odyssey.TextInputLayout"
                android:hint="@string/phone"
                android:id="@+id/account_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.Odyssey.TextInputNotEditable"
                    android:id="@+id/field_input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/example_phone"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Odyssey.TextInputLayout"
                android:hint="@string/email"
                android:id="@+id/account_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.Odyssey.TextInputNotEditable"
                    android:id="@+id/field_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/example_email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnConfirmEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:text="@string/btn_send_confirmation"
                android:layout_marginStart="17dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Odyssey.TextInputLayout"
                android:hint="@string/password"
                android:id="@+id/account_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.Odyssey.TextInputNotEditable"
                    android:id="@+id/field_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/example_name_surname"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirm_password_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:visibility="gone"
            android:paddingVertical="5dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Odyssey.TextInputLayout"
                android:hint="@string/confirm_password"
                android:id="@+id/account_input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp">
            <Button
                android:id="@+id/btnDeactivateOwn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deactivate_account"
                android:backgroundTint="?attr/colorError"
                android:textColor="?attr/colorOnError"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="17dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>