<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.user.ProfileFragment">

    <!-- HEADER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="16dp"
        android:layout_marginBottom="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="60dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:strokeWidth="1dp"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="edit"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/report_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Report"/>

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="18sp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/profile_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="10dp"
                android:text="@string/role" />
        </LinearLayout>
    </LinearLayout>

    <!-- CONTACT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:paddingBottom="8dp"
            android:layout_gravity="center"
            android:text="@string/contact"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Email:" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:justificationMode="inter_word"
                android:padding="4dp"
                android:text="Email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Phone:" />

            <TextView
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:justificationMode="inter_word"
                android:padding="4dp"
                android:text="Phone" />
        </LinearLayout>
    </LinearLayout>

    <!-- ADDRESS -->
    <LinearLayout
        android:id="@+id/profile_address_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:paddingBottom="8dp"
            android:layout_gravity="center"
            android:text="@string/address"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Street:" />

            <TextView
                android:id="@+id/profile_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:justificationMode="inter_word"
                android:padding="4dp"
                android:text="Street" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="City:" />

            <TextView
                android:id="@+id/profile_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:justificationMode="inter_word"
                android:padding="4dp"
                android:text="City" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Country:" />

            <TextView
                android:id="@+id/profile_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:justificationMode="inter_word"
                android:padding="4dp"
                android:text="Country" />
        </LinearLayout>
    </LinearLayout>

    <!-- ABOUT ME -->
    <LinearLayout
        android:id="@+id/profile_bio_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:layout_gravity="center"
            android:paddingBottom="15dp"
            android:text="@string/about_me"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:justificationMode="inter_word"
            android:text="@string/about_me"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <!-- REVIEW SUBMISSION -->
    <LinearLayout
        android:id="@+id/review_submission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- RatingBar -->
            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5"
                android:progressTint="@color/star_color"
                android:rating="0" />
        </LinearLayout>

        <!-- TextInputLayout with TextInputEditText for the comment -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/review_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:hint="Write a comment" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- MaterialButton for submitting the comment -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/review_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/submit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/review_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

</LinearLayout>

